--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -1018,11 +1018,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "astronaut.to_csv('astronaut.csv', sep='\\t', index=False)"
+    "astronaut.to_csv(r'astronaut.csv', sep='\\t', index=False)"
    ]
   },
   {
